ADD: 新增解压包方式

--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,2 @@
-download:
-  image:
-    suffix: .png
-
-dir_rule:
-  base_dir: books
-client:
-  postman:
-    meta_data:
-      proxies: system
+save:
+  dest_dir: "zip"
