--- a/config/jm_downloader.yml
+++ b/config/jm_downloader.yml
@@ -1,3 +1,4 @@
+# 配置文件说明 https://github.com/hect0x7/JMComic-Crawler-Python/blob/master/assets/docs/sources/option_file_syntax.md
 download:
   image:
     suffix: .png
