ADD: 同步下载功能

--- a/config/jm_downloader.yml.example
+++ b/config/jm_downloader.yml.example
@@ -1,5 +1,6 @@
 # 配置文件说明 https://github.com/hect0x7/JMComic-Crawler-Python/blob/master/assets/docs/sources/option_file_syntax.md
 download:
+  cache: true
   image:
     suffix: .png
 
