--- a/config/jm_downloader.yml.example
+++ b/config/jm_downloader.yml.example
@@ -10,4 +10,21 @@ dir_rule:
 client:
   postman:
     meta_data:
-      proxies: system
+      proxies: 127.0.0.1:7890
+
+  impl: html
+
+  # domain: 禁漫域名配置，一般无需配置，jmcomic会根据上面的impl自动设置相应域名
+  # 该配置项需要和上面的impl结合使用，因为禁漫网页端和APP端使用的是不同域名，
+  # 所以配置是一个dict结构，key是impl的值，value是域名列表，表示这个impl走这些域名。
+  # 域名列表的使用顺序是：先用第一个域名，如果第一个域名重试n次失败，则换下一个域名重试，以此类推。
+  # 下面是示例：（注意下面这些域名可能会过时，不一定能用）
+  domain:
+    html:
+      - 18comic.ink
+      - jmcomic-zzz.org
+      - jmcomic-zzz.one
+      - www.cdnplaystation6.cc
+      - www.cdnaspa.club
+      - www.cdnplaystation6.vip
+      - www.cdnaspa.vip
