--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -3,3 +3,13 @@ save:
   cache: true
 server:
   redis: 'redis://localhost:6379/2'
+database:
+  type: sqlite
+#  mysql:
+#    host: localhost
+#    user: root
+#    password: 123456
+#    database: test
+#    port: 3306
+  sqlite:
+    database: app.db
