FIX: 修改配置文件

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -3,6 +3,8 @@ save:
   cache: true
 server:
   redis: 'redis://localhost:6379/2'
+  port: 12345
+  dashboard_port: 9181
 database:
   type: sqlite
 #  mysql:
