--- a/Procfile.example
+++ b/Procfile.example
@@ -1,3 +1,3 @@
-web: uvicorn app.fast.fast_app:server_app --reload --port 12345 --host 0.0.0.0
-worker: PYTHONPATH=. rq worker download --url redis://192.168.123.147:6379/3
-dashboard: rq-dashboard --redis-url redis://192.168.123.147:6379/3 --port 9181
+web: uvicorn app.fast.fast_app:server_app --reload --port $WEB_PORT --host 0.0.0.0
+worker: PYTHONPATH=. rq worker download --url $REDIS_URL
+dashboard: rq-dashboard --redis-url $REDIS_URL --port $DASHBOARD_PORT
