--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -7,6 +7,8 @@ server:
   dashboard_port: 9181
   #rq worker数量 处理异步任务的数量 服务器好可以开大点
   work_size: 3
+  #rq 默认队列数量建议设为1
+  default_size: 1
 database:
   type: sqlite
 #  mysql:
